--- a/index2.html
+++ b/index2.html
@@ -163,6 +163,7 @@
 <div class="mySlides" style="text-align: center;"><img src="2020Visions/2020Visions10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="2020Visions/2020Visions11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="2020Visions/2020Visions12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="20thCenturyFox/Fox1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down002.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down003.jpg"></div>
@@ -175,7 +176,13 @@
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="21Down/21Down012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="300/300.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="300/300Movie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="365Samurai/365Samurai.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="3StorySecretHistory/3StorySecretHistory.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3DAction/3DAction.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3DBatman/3DBatman.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3DTalesOfTheWest/3DTalesOfTheWest.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank/4KidsWalkIntoABank01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank/4KidsWalkIntoABank02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank/4KidsWalkIntoABank03.jpg"></div>
@@ -194,6 +201,9 @@
 <div class="mySlides" style="text-align: center;"><img src="4Most/4Most3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="4Most/4Most4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="4Most/4Most5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4UniverseX/4UniverseX.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="47Ronin/47Ronin.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="47Ronin/47RoninMovie.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="52/52_001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="52/52_002.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="52/52_003.jpg"></div>
@@ -210,6 +220,9 @@
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin04b.jpg" title="variant cover"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin05b.jpg" title="variant cover"></div>
+<div class="mySlides" style="text-align: center;"><img src="99days/99days.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="911Artists/911Artists.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="911Artists/911Artists2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A-Force/AForce1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A-Force/AForce2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="A-Force/AForce3.jpg"></div>
