index2 now slideshow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <a href="#m">m</a> <a href="#n">n</a> <a href="#o">o</a> <a href="#p">p</a> 
 <a href="#q">q</a> <a href="#r">r</a> <a href="#s">s</a> <a href="#t">t</a> <a href="#u">u</a> <a href="#v">v</a> 
 <a href="#w">w</a> <a href="#x">x</a> <a href="#y">y</a> <a href="#z">z</a><br>
-<a href="revenue.html">Top Franchises</a> &nbsp; <a href="MediaCompanies.html">Top Companies</a>
+<p>
+<a href="revenue.html">Top Franchises</a> &nbsp; <a href="MediaCompanies.html">Top Companies</a> &nbsp;
+<a href="slideshow.html">Cover Slideshow</a>
+
 <table id="myTable" class="tablesorter">
 <thead>
 <tr>
@@ -14650,6 +14653,13 @@
 <td>2015</td>
 <td>Activision</td>
 <td><a href="Skylanders/Skylanders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Skywald</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="Skywald/Skywald.html">Details</a></td>
 </tr>
 
 <tr>
