--- a/Skywald/Skywald.html
+++ b/Skywald/Skywald.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Skywald1.jpg">
+<b>Skywald Publications</b>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,19 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Skywald13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,26 +44,22 @@ The company name is a combination of those of its founders, former Marvel Comics
 </p><p>
 Titles
 </p><p>
-<li>The 1974 Nightmare Yearbook (1974)
-<li>1974 Psycho Fall Special (1974)
-<li>1974 Psycho Yearbook	1974	1 issues (1 indexed)	Gallery	April 1974
-<li>Blazing Six-Guns [m]	1971	2 issues (2 indexed)	Gallery	February 1971 - April 1971
-<li>The Bravados [m]	1971	1 issues (1 indexed)	Gallery	August 1971
-<li>Butch Cassidy	1971	3 issues (3 indexed)	Gallery	June 1971 - October 1971
-<li>The Crime Machine [m]	1971	2 issues (2 indexed)	Gallery	February 1971 - May 1971
-<li>The Heap [m]	1971	1 issues (1 indexed)	Gallery	September 1971
-<li>Hell Rider [m]	1971	2 issues (2 indexed)	Gallery	July-August 1971 - September-October 1971
-<li>Jungle Adventures	1971	3 issues (3 indexed)	Gallery	March 1971 - June 1971
-<li>Nightmare [m]	1970	23 issues (23 indexed)	Gallery	December 1970 - February 1975
-<li>Nightmare 1973 Winter-Special [m]	1973	1 issues (1 indexed)	Gallery	[March] 1973
-<li>Nightmare [Annual]	1972	1 issues (1 indexed)	Gallery	November 1972
-<li>Psycho	1971	24 issues (24 indexed)	Gallery	January 1971 - March 1975
-<li>Psycho 1972 Annual	1972	1 issues (1 indexed)	Gallery	August 1972
-<li>Science Fiction Odyssey	1971	1 issues (1 indexed)	Add	Intended for September 1971 [Unpublished]
-<li>Scream [m]	1973	11 issues (11 indexed)	Gallery	August 1973 - March 1975
-<li>The Sundance Kid	1971	3 issues (3 indexed)	Gallery	June 1971 - September 1971
-<li>Tender Love Stories	1971	4 issues (4 indexed)	Gallery	February 1971 - July 1971
-<li>Wild Western Action [m]	1971	3 issues (3 indexed)	Gallery	March 1971 - June 1971
+<li><a href="Skywald1.jpg">1974 Nightmare Yearbook</a> (1974)
+<li><a href="Skywald2.jpg">1974 Psycho Fall Special</a> (1974)
+<li><a href="Skywald3.jpg">1974 Psycho Yearbook</a> (1974)
+<li><a href="Skywald4.jpg">Blazing Six-Guns</a> (1971)
+<li><a href="Skywald5.jpg">Bravados</a> (1971)
+<li><a href="Skywald6.jpg">Butch Cassidy</a> (1971)
+<li><a href="Skywald7.jpg">Crime Machine</a> (1971)
+<li><a href="Skywald8.jpg">Heap</a> (1971)
+<li><a href="Skywald9.jpg">Hell Rider</a> (1971)
+<li><a href="Skywald10.jpg">Jungle Adventures</a> (1971)
+<li><a href="../Nightmare/Nightmare.html">Nightmare</a> (1972)
+<li><a href="../Psycho/Psycho.html">Psycho</a> (1972)
+<li><a href="../Scream/Scream.html">Scream</a> (1973)
+<li><a href="Skywald11.jpg">Sundance Kid</a> (1971)
+<li><a href="Skywald12.jpg">Tender Love Stories</a> (1971)
+<li><a href="Skywald13.jpg">Wild Western Action</a> (1971)
 </p>
 
 </body>
