--- a/slideshow.html
+++ b/slideshow.html
@@ -891,27 +891,27 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AlanWatts/AlanWatts03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlanWatts/AlanWatts04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlanWatts/AlanWatts05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison00.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlAvison05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbertDorne06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlColumbia01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlColumbia02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlColumbia03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AlColumbia04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison00.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlAvison/AlAvison05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbertDorne/AlbertDorne06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer/AlbrechtDurer01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer/AlbrechtDurer02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer/AlbrechtDurer03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer/AlbrechtDurer04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlbrechtDurer/AlbrechtDurer05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlColumbia/AlColumbia01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlColumbia/AlColumbia02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlColumbia/AlColumbia03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlColumbia/AlColumbia04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlexGrey01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlexGrey02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlexGrey03.jpg"></div>
