--- a/AlienResurrection/AlienResurrection.html
+++ b/AlienResurrection/AlienResurrection.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Alien Resurrection</title>
 </head>
 
@@ -11,17 +12,29 @@
 Series: 1 Movie, 2 issue mini series<br>
 Publisher: 1997 20th Century Fox, Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Alien4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienResurrection1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienResurrection2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Alien Resurrection is a 1997 American science-fiction action horror film directed by Jean-Pierre Jeunet, written by Joss Whedon, and starring Sigourney Weaver and Winona Ryder. It is the fourth installment in the Alien film series, and the final installment in the original series. It was filmed at the 20th Century Fox studios in Los Angeles, California.
 </p><p>
 Set 200 years after the preceding installment Alien 3 (1992), Ellen Ripley is cloned and an Alien queen (Tom Woodruff Jr.) is surgically removed from her body. The United Systems Military hopes to breed Aliens to study and research on the spaceship USM Auriga, using human hosts kidnapped and delivered to them by a group of mercenaries. 
 </p><p>
 The Aliens escape their enclosures, while Ripley and the mercenaries attempt to escape and destroy the Auriga before it reaches its destination: Earth. Additional roles are played by Ron Perlman, Dan Hedaya, J. E. Freeman, Brad Dourif, and Michael Wincott.
 </p><p>
-The Comic:
-</p><p>
-<img src="AlienResurrection1.jpg"> <img src="AlienResurrection2.jpg">
-</p><p>
-Illustrator: Eduardo Risso, Writer: Jim Vance<br>
+The Comic was illustrated by Eduardo Risso and written by Jim Vance<br>
 Two hundred years ago, Ellen Ripley died in a blazing inferno. But the government has need of her again. So they've rebuilt her. And now she's going to be tested against a hive of Aliens.
 </p><p>
 As horrific as the Aliens are, nothing will prepare you for the newest Alien hybrid... and the truth about the reappearance of Ripley! 
