--- a/Aliens/Aliens.html
+++ b/Aliens/Aliens.html
@@ -2,12 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Aliens</title>
 </head>
 
 <body>
 <img src="AliensMovie.jpg"><br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AliensMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensOutbreak.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensNightmareAsylum.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Omnibus.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Aliens is a 1986 American science fiction action film written and directed by James Cameron, produced by Gale Anne Hurd and starring Sigourney Weaver. It is the sequel to the 1979 film Alien and the second installment in the Alien franchise. 
 </p><p>
 The film follows Weaver's character Ellen Ripley as she returns to the moon where her crew encountered the hostile Alien creature, this time accompanied by a unit of space marines. Additional roles are played by Carrie Henn, Michael Biehn, Paul Reiser, Lance Henriksen, Jenette Goldstein, William Hope, Al Matthews, and Bill Paxton.
@@ -17,9 +35,6 @@ Aliens was released on July 18, 1986 and grossed $180 million worldwide. It was 
 
 The Comic Series:
 </p><p>
-<img src="AliensOutbreak.jpg">
-<img src="AliensNightmareAsylum.jpg">
-<img src="Omnibus.jpg"> <br>
 Series: one-shots, mini-series, collections, omnibus volumes<br>
 Illustrator: Mark A. Nelson, Denis Beauvais<br>
 Writer: Mark Verheiden<br>
