--- a/AmazingSpider-Man/AmazingSpiderman.html
+++ b/AmazingSpider-Man/AmazingSpiderman.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<img src="AmazingSpiderman.jpg" title="cover by Jack Kirby and Steve Ditko"> <br>
+<img src="AmazingSpiderMan001.jpg" title="cover by Jack Kirby and Steve Ditko"> <br>
 443 issues (#1-441), 1963-current Marvel<br>
 Continues from <a href="../AmazingFantasy/AmazingFantasy.html">Amazing Fantasy</a> #15.
 <p>
@@ -17,7 +17,7 @@ Continues from <a href="../AmazingFantasy/AmazingFantasy.html">Amazing Fantasy</
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="AmazingSpiderman.jpg" title="cover by Jack Kirby and Steve Ditko"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan001.jpg" title="cover by Jack Kirby and Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan002.jpg" title="cover by Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan003.jpg" title="cover by Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan004.jpg" title="cover by Steve Ditko"></div>
@@ -167,7 +167,7 @@ Continues from <a href="../AmazingFantasy/AmazingFantasy.html">Amazing Fantasy</
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan148.jpg" title="cover by Gil Kane"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan149.jpg" title="cover by Gil Kane"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan150.jpg" title="cover by Gil Kane"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan500.jpg"></div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
