--- a/slideshow.html
+++ b/slideshow.html
@@ -1499,7 +1499,7 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AmazingMysteryFunnies/AmazingMysteryFunnies22.jpg" title="cover by Paul Gustavson"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingMysteryFunnies/AmazingMysteryFunnies23.jpg" title="cover by George Harrison"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingMysteryFunnies/AmazingMysteryFunnies24.jpg" title="cover by Bob Bugg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderman.jpg" title="cover by Jack Kirby and Steve Ditko"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan001.jpg" title="cover by Jack Kirby and Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan002.jpg" title="cover by Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan003.jpg" title="cover by Steve Ditko"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan004.jpg" title="cover by Steve Ditko"></div>
@@ -1578,7 +1578,8 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan077.jpg" title="cover by John Romita"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan078.jpg" title="cover by John Romita"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan079.jpg" title="cover by John Romita"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan080.jpg" title="cover by John Romita"></div> <div class="mySlides" style="text-align: center;"><img src="AmazingSpiderMan081.jpg" title="cover by John Romita"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan080.jpg" title="cover by John Romita"></div> 
+<div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan081.jpg" title="cover by John Romita"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan082.jpg" title="cover by Marie Severin"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan083.jpg" title="cover by John Romita"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmazingSpider-Man/AmazingSpiderMan084.jpg" title="cover by John Romita"></div>
@@ -1790,59 +1791,59 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AmericanCentury/AmericanCentury25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanCentury/AmericanCentury26.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanCentury/AmericanCentury27.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg25.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg26.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg27.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg28.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg29.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg30.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg31.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg32.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg33.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg34.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg35.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg36.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg37.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg38.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg39.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg40.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg41.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198801.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198802.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198803.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198804.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198805.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198806.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198807.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198808.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198809.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198810.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198811.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198812.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198801.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198802.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198803.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198804.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198805.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198806.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198807.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198808.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198809.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198810.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198811.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198812.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFreak01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFreak02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFreak03.jpg"></div>
@@ -2521,28 +2522,28 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="avengers1963series077.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="avengers1963series078.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="avengers1963series079.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series080.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series081.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series082.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series083.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series084.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series085.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series086.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series087.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series088.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series089.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series090.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series091.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series092.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series093.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series094.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series095.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series096.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series097.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series098.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series099.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series100.jpg"></div>
- <div class="mySlides" style="text-align: center;"><img src="avengers1963series101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series082.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series083.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series084.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series085.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series086.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series088.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series089.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series090.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series091.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series092.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series093.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series094.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series095.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series096.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series097.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series098.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series099.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="avengers1963series101.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Avengers1959.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Avengers1959_01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Avengers1959_02.jpg"></div>
@@ -2553,6 +2554,8 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+<p>
+<img src="slideshow.jpg">
+</p>
 </body>
 </html>
